--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "framer-motion": "^6",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "timeago": "^1.6.7",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
